# ULTRA

./: .gitignore  AUTHORS  CMakeLists.txt  Dockerfile_build  Dockerfile_deb  Dockerfile_rpm  Dockerfile_run  FASTAReader.hpp  FileReader.cpp  JSONPass.cpp  JSONReader.cpp  JSONReader.hpp  JSONRepeat.cpp  JSONRepeat.hpp  LICENSE  Makefile  README.md  SequenceWindow.hpp  Symbol.cpp  benchmark.md  main.cpp  repeat.cpp  repeat.hpp  settings.hpp  ultra.cpp  umatrix.cpp  umatrix.hpp  umodel.cpp  umodeldriver.cpp
.github/workflows/: build-and-test.yml  build.yml  release.yml  update_release_table.py
examples/: Makefile  ex1.fa  ex2.fa  ex3.fa  ex4.fa  ex_at80.fa  ex_at90.fa  ex_large.fa  example_1.fa  example_2.fa  example_3.fa  library_example.cpp  run-all.sh  tune_file
lib/: README.md  json11.cpp  json11.hpp
src/: BEDFileWriter.cpp  BEDFileWriter.hpp  CLI11.hpp  FASTAReader.cpp  FASTAReader.hpp  FileReader.cpp  FileReader.hpp  JSONFileWriter.cpp  JSONFileWriter.hpp  JSONPass.cpp  JSONPass.hpp  JSONReader.cpp  JSONReader.hpp  JSONRepeat.cpp  JSONRepeat.hpp  Makefile  RepeatFileWriter.hpp  RepeatSplitter.cpp  RepeatSplitter.h  RepeatSplitter.hpp  SequenceWindow.cpp  SequenceWindow.hpp  Symbol.cpp  Symbol.hpp  TabFileWriter.cpp  TabFileWriter.hpp  cli.cpp  cli.hpp  main.cpp  mask.cpp  mask.h  mask.hpp  repeat.cpp  repeat.hpp  repeatSplitter.cpp  repeatSplitter.hpp  settings.cpp  settings.hpp  ultra.cpp  ultra.hpp  (+6 more)
tool/: build-builder-image.sh  build-runner-image.sh  check-format.sh  push-builder-image.sh  push-runner-image.sh  run-format.sh
